chore: rename the submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "AMS-backend"]
 	path = AMS-backend
 	url = git@github.com:subin989/AMS-backend.git
+[submodule "backend"]
+	path = backend
+	url = git@github.com:subin989/AMS-backend.git
