chore: update dockker compose and env.exmaple

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,13 @@ DB_PASSWORD=
 API_PORT=
 DEBUG_PORT=
 
-# Frontend variables
+
 FRONTEND_PORT=
+VITE_BACKEND_URL=
+
+
+JWT_SECRET=
+JWT_ISSUER=
+JWT_ALGORITHM=
+JWT_ACCESS_LIFETIME=
+JWT_REFRESH_LIFETIME=
