--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,11 @@ services:
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
     ports:
-      - 3306:3306
-    networks:
-      - ams
+      - 3302:3306
+    
 
   backend:
+    image: ams-backend
     build:
       context: ./backend/
       dockerfile: Dockerfile
@@ -31,8 +31,6 @@ services:
     restart: on-failure
     volumes:
       - ./.logs/backend/:/app/.logs/
-    depends_on:
-      - mysql
     develop:
       watch:
         - action: sync
@@ -53,41 +51,54 @@ services:
           path: ./backend/pyproject.toml
         - action: rebuild
           path: .env
-    networks:
-      - ams
+    
 
-  # frontend:
-  #   build:
-  #     context: ./frontend/
-  #     dockerfile: Dockerfile
-  #   container_name: frontend_app
-  #   env_file:
-  #     - .env
-  #   ports:
-  #     - 3000:3000
-  #   restart: on-failure
-  #   volumes:
-  #     - ./frontend/:/app
-  #   depends_on:
-  #     - backend
-  #   networks:
-  #     - abs
+  frontend:
+    build:
+      context: ./ams-frontend/
+      dockerfile: Dockerfile
+      target: development
+      args:
+        VITE_BACKEND_URL: http://localhost/backend
+        env_file: .env
+    container_name: frontend_app
+    env_file: .env
+    depends_on:
+      - backend
+    ports:
+      - 3000:3000
+    volumes:
+      - ./ams-frontend/:/app
+      - /app/node_modules
+    develop:
+      watch:
+        - action: sync
+          path: ./frontend
+          target: /app
+          ignore:
+            - ./frontend/node_modules
+            - ./frontend/.dockerignore
+            - ./frontend/.gitignore
+        - action: rebuild
+          path: ./frontend/package.json
+        - action: rebuild
+          path: .env
 
   nginx:
     image: nginx:1.27.0
-    container_name: nginx_proxy
     depends_on:
       - mysql
-      # - frontend
       - backend
+      - frontend
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./.logs/nginx/:/var/log/nginx/
     ports:
       - 80:80
-    networks:
-      - ams
+   
+
 
 networks:
-  ams:
-    driver: bridge
+  default:
+    external: false
+    name: ams
